graylog-terraform/sg-mongo.tf
resource "aws_security_group" "mongo" {
  name   = "mongo-sg"
  vpc_id = aws_vpc.graylog.id

  ingress {
    from_port       = 27017
    to_port         = 27017
    protocol        = "tcp"
    security_groups = [aws_security_group.internal.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
